[package]
name = "LD49"
version = "0.1.0"
edition = "2018"
authors = ["yopox yopoxdev@gmail.com"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5.0"
rand = "0.8.4"
derive_more = "0.99.16"
ezing = "0.2.1"
bevy_asset_loader = "0.6.0"
bevy_kira_audio = "0.6.0"
