[package]
name = "LD49"
version = "0.1.0"
edition = "2018"
authors = ["yopox yopoxdev@gmail.com"]
description = "An autochess made for LD49."

[features]
default = [
  "bevy/bevy_gltf",
  "bevy/bevy_winit",
  "bevy/render",
  "bevy/png",
  "bevy_kira_audio/ogg",
]

native = [
  "bevy/bevy_wgpu",
]

web = [
  "bevy_webgl2"
]

[dependencies]
bevy = {version="0.5.0", default-features=false}
bevy_webgl2 = {version="0.5.0", optional=true}
rand = "0.8.4"
derive_more = "0.99.16"
ezing = "0.2.1"
bevy_asset_loader = "0.6.0"
bevy_kira_audio = "0.6.0"

[package.metadata.bundle]
name = "Unbalanced Brawl"
resources = ["assets"]
identifier = "fr.haya.unbalanced_brawl"

[package.metadata.deb]
section = "Games"
assets = [
    ["target/release/LD49", "/usr/lib/LD49/", "755"],
    ["assets/*", "/usr/lib/LD49/assets", "644"],
    ["assets/ost/*", "/usr/lib/LD49/assets/ost", "644"],
    ["assets/ost/SFX/*", "/usr/lib/LD49/assets/ost/SFX", "644"],
    ["LD49.desktop", "/usr/share/applications/", "644"],
]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1